freest/test/prog/Invalid/Typing/UnexpectedTypeParamLambda/UnexpectedTypeParamLambda.fst
module UnexpectedTypeParamLambda where 

foo : Int -> Int -> Int
foo x = \@(a : *T) -> x
